--- a/StarMap.Types/StarMap.Types.csproj
+++ b/StarMap.Types/StarMap.Types.csproj
@@ -1,9 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	  <PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	  </PropertyGroup>
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	  <ItemGroup>
+	    <PackageReference Include="Google.Protobuf" Version="3.32.1" />
+	    <PackageReference Include="Grpc.Tools" Version="2.72.0">
+	      <PrivateAssets>all</PrivateAssets>
+	      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	    </PackageReference>
+	  </ItemGroup>
+
+	<ItemGroup>
+		<Protobuf Include="Proto\IPC.proto" />
+	</ItemGroup>
 
 </Project>
