--- a/StarMapLoader/StarMapLoader.csproj
+++ b/StarMapLoader/StarMapLoader.csproj
@@ -1,19 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Lib.Harmony" Version="2.4.1" />
+    <PackageReference Include="Google.Protobuf" Version="3.32.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DummyProgram\DummyProgram.csproj" />
-    <ProjectReference Include="..\StarMap.API\StarMap.API.csproj" />
     <ProjectReference Include="..\StarMap.Types\StarMap.Types.csproj" />
+    <ProjectReference Include="..\StarMap\StarMap.csproj" />
   </ItemGroup>
 
 </Project>
