Output major, minor, and patch version components
Added echo statements to output version components.

--- a/.github/workflows/release-zip.yml
+++ b/.github/workflows/release-zip.yml
@@ -51,6 +51,10 @@ jobs:
           # Split version into components
           IFS='.' read -r major minor patch <<< "$prev_version"
 
+          echo $major   # outputs 1
+          echo $minor   # outputs 2
+          echo $patch   # outputs 3
+        
           # Increment version based on bump type
           case "$bump_type" in
             major) ((major++)); minor=0; patch=0 ;;
