--- a/StarMap/Properties/launchSettings.json
+++ b/StarMap/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "StarMap": {
-      "commandName": "Project",
-      "commandLineArgs": "starmap_pipe"
+      "commandName": "Project"
     }
   }
 }
