--- a/StarMap.Core/StarMap.Core.csproj
+++ b/StarMap.Core/StarMap.Core.csproj
@@ -8,10 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Lib.Harmony" Version="2.4.1" />
+	  <PackageReference Include="StarMap.KSA.Dummy" Version="1.0.4">
+		  <ExcludeAssets>runtime</ExcludeAssets>
+	  </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DummyProgram\DummyProgram.csproj" />
     <ProjectReference Include="..\StarMap.API\StarMap.API.csproj" />
     <ProjectReference Include="..\StarMap.Types\StarMap.Types.csproj" />
   </ItemGroup>
