--- a/StarMapLoader/StarMapLoader.csproj
+++ b/StarMapLoader/StarMapLoader.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.32.1" />
+    <PackageReference Include="Google.Protobuf" Version="3.33.0" />
+    <PackageReference Include="StarMap.Index.API" Version="0.0.4" />
   </ItemGroup>
 
   <ItemGroup>
