--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -26,6 +26,14 @@ jobs:
               with:
                   dotnet-version: ${{ env.DOTNET_VERSION }}
 
+            - name: Setup Github NuGet
+              run: |
+                  dotnet nuget add source \
+                  --username ${{ github.actor }} \
+                  --password ${{ secrets.GITHUB_TOKEN }} \
+                  --store-password-in-clear-text \
+                  --name github "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
+
             - name: Restore dependencies
               run: dotnet restore ${{ env.PROJECT }}
 
