--- a/.github/workflows/release-zip.yml
+++ b/.github/workflows/release-zip.yml
@@ -73,6 +73,14 @@ jobs:
                   git tag "$NEW_VERSION"
                   git push origin "$NEW_VERSION"
 
+            - name: Setup Github NuGet
+              run: |
+                  dotnet nuget add source \
+                  --username ${{ github.actor }} \
+                  --password ${{ secrets.GITHUB_TOKEN }} \
+                  --store-password-in-clear-text \
+                  --name github "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
+
             - name: Build
               run: dotnet publish ${{ env.PROJECT }} -c Release -o ${{ env.OUTPUT_PATH }}
 
