--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -27,12 +27,10 @@ jobs:
               with:
                   dotnet-version: ${{ env.DOTNET_VERSION }}
 
-            - name: Setup Github NuGet
+            - name: Restore dependencies
               run: |
                   dotnet nuget add source --username "${{ github.actor }}" --password "${{ secrets.GITHUB_TOKEN }}" --store-password-in-clear-text --name github "${{ env.NUGET_SOURCE }}"
-
-            - name: Restore dependencies
-              run: dotnet restore ${{ env.PROJECT }}
+                  dotnet restore ${{ env.PROJECT }}
 
             # - name: Run tests
             #   run: dotnet test --no-build --verbosity normal
