--- a/.github/workflows/release-zip.yml
+++ b/.github/workflows/release-zip.yml
@@ -118,6 +118,9 @@ jobs:
                     exit 0
                   fi
 
+                  echo "DEBUG: Previous tag: $prev"
+                  echo "DEBUG: Current commit: $current"
+
                   diff=$(git diff --name-only "$prev" "$current")
                   echo "diff_files=$diff" >> $GITHUB_OUTPUT
 
@@ -131,6 +134,12 @@ jobs:
               if: steps.api_check.outputs.changed == 'true'
               run: |
                   dotnet restore StarMap.API/StarMap.API.csproj
-                  dotnet pack StarMap.API/StarMap.API.csproj -c Release -o ./nupkg /p:PackageVersion=${{ steps.version.outputs.new }}
+                  dotnet pack \
+                    -c Release \
+                    -o ./nupkg \
+                    /p:PackageVersion=${{ steps.version.outputs.new }} \
+                    /p:Version=${{ steps.version.outputs.new }} \
+                    /p:AssemblyVersion=${{ steps.version.outputs.new }} \
+                    /p:FileVersion=${{ steps.version.outputs.new }}
                   dotnet nuget add source --username "${{ github.actor }}" --password "${{ secrets.GITHUB_TOKEN }}" --store-password-in-clear-text --name github "${{ env.NUGET_SOURCE }}"
                   dotnet nuget push ./nupkg/*.nupkg --source github --api-key "${{ secrets.GITHUB_TOKEN }}" --skip-duplicate
