--- a/.github/workflows/release-zip.yml
+++ b/.github/workflows/release-zip.yml
@@ -134,7 +134,7 @@ jobs:
               if: steps.api_check.outputs.changed == 'true'
               run: |
                   dotnet restore StarMap.API/StarMap.API.csproj
-                  dotnet pack \
+                  dotnet pack StarMap.API/StarMap.API.csproj \
                     -c Release \
                     -o ./nupkg \
                     /p:PackageVersion=${{ steps.version.outputs.new }} \
