Fix issue with patch not working

--- a/.github/workflows/release-zip.yml
+++ b/.github/workflows/release-zip.yml
@@ -118,8 +118,8 @@ jobs:
                     exit 0
                   fi
 
-                  echo "DEBUG: Previous tag: $prev"
-                  echo "DEBUG: Current commit: $current"
+                  echo "Previous tag: $prev"
+                  echo "Current commit: $current"
 
                   diff=$(git diff --name-only "$prev" "$current")
                   echo "diff_files=$diff" >> $GITHUB_OUTPUT
