Build in pull request to dev

--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -4,7 +4,7 @@ on:
     pull_request:
         # Re-run the version calculation when labels are added or when new commits are pushed
         types: [opened, synchronize, labeled, reopened, edited]
-        branches: [main]
+        branches: [main, dev]
 
 permissions:
     pull-requests: write
